[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zen_garden"
authors = [
  {name = "Jacob Mannhardt", email = "zen-garden@ethz.ch"},
  {name = "Alissa Ganter"},
  {name = "Johannes Burger"},
  {name = "Francesco De Marco"},
  {name = "Lukas Kunz"},
  {name = "Lukas Schmidt-Engelbertz"},
  {name = "Paolo Gabrielli"},
  {name = "Giovanni Sansavini"},
  ]
# do not change version manually! Done by bump2version
version = "2.4.8"
requires-python= ">=3.11"
description="ZEN-garden is an optimization model of energy systems and value chains."
readme = "README.md"
license = { file = "LICENSE.txt" }

dependencies = [
    "xarray",
    "cython",
    "numpy",
    "pandas",
    "scipy",
    "pint",
    "tables",
    "pydantic",
    "tsam",
    "h5py",
    "filelock",
    "ordered-set",
    "pyogrio",
    "psutil",
    "linopy",
    "requests",
    "ipykernel",
    "zen-temple>=0.6.0"
]

[project.optional-dependencies]
docs = [
    "sphinx==7.3.7",
    "myst-parser==3.0.1",
    "sphinx-book-theme==1.1.3",
    "pydata-sphinx-theme==0.15.4",
    "sphinx-reredirects==0.1.4",
    "nbsphinx==0.9.4",
    "nbsphinx-link==1.3.0",
]

dev = [
    "pytest",
    "coverage",
    "pytest-xdist",
    "pytest-cov"
]

vis = [
    "matplotlib",
]

gurobipy = ["gurobipy"]

[project.urls]
Homepage = "https://github.com/ZEN-universe/ZEN-garden"
Documentation = "https://zen-garden.readthedocs.io/en/latest/"
Zenodo = "https://zenodo.org/api/records/13385110"

[tool.pytest.ini_options]
addopts = "-n auto"