[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zen_garden"
authors = [
  {name = "Jacob Mannhardt", email = "zen-garden@ethz.ch"},
  {name = "Alissa Ganter"},
  {name = "Johannes Burger"},
  {name = "Francesco De Marco"},
  {name = "Lukas Kunz"},
  {name = "Lukas Schmidt-Engelbertz"},
  {name = "Christoph Funke"},
  {name = "Paolo Gabrielli"},
  {name = "Giovanni Sansavini"},
  ]
# do not change version manually! Done by bump2version
version = "2.9.0"
requires-python= ">=3.11,<3.14"
description="ZEN-garden is an optimization model of energy systems and value chains."
readme = "README.md"
license = { file = "LICENSE.txt" }

dependencies = [
    "xarray",
    "cython",
    "numpy",
    "pandas<3.0.0",
    "scipy",
    "pint",
    "tables",
    "pydantic",
    "tsam",
    "h5py",
    "filelock",
    "ordered-set",
    "pyogrio",
    "psutil",
    "linopy",
    "requests",
    "ipykernel",
    "zen-temple>=0.7.3"
]

[project.optional-dependencies]
docs = [
    "sphinx==7.3.7",
    "myst-parser==3.0.1",
    "sphinx-book-theme==1.1.3",
    "pydata-sphinx-theme==0.15.4",
    "sphinx-reredirects==0.1.4",
    "nbsphinx==0.9.4",
    "nbsphinx-link==1.3.0",
    "sphinxcontrib-mermaid",
    "furo"
]

dev = [
    "pytest",
    "coverage",
    "pytest-xdist",
    "pytest-cov",
    "black==25.12.0",
    "ruff==0.14.13",
    "mypy==1.19.1"
]

vis = [
    "matplotlib",
]

gurobipy = ["gurobipy"]

[project.urls]
Homepage = "https://github.com/ZEN-universe/ZEN-garden"
Documentation = "https://zen-garden.readthedocs.io/en/latest/"
Zenodo = "https://zenodo.org/api/records/13385110"

[project.scripts]
zen-garden = "zen_garden.cli.zen_garden_cli:create_zen_garden_cli"
zen-visualization = "zen_garden.cli.zen_visualization_cli:create_zen_visualization_cli"
zen-example = "zen_garden.cli.zen_example_cli:create_zen_example_cli"
zen-operation="zen_garden.cli.zen_operation_cli:create_zen_operation_cli"

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.black]
line-length = 79
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 79
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["your_package_name"]

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false